[project]
name = "DeepAgent"
version = "0.1.0"
description = "A deep agent for various tasks."
requires-python = "==3.10.*"
dependencies = [
    "vllm",
    "transformers",
    "sentence-transformers",
    "aiohttp",
    "alfworld",
    "beautifulsoup4",
    "chardet",
    "fastapi",
    "fuzzywuzzy",
    "func-timeout",
    "lxml",
    "nltk",
    "numpy",
    "openai",
    "openai-whisper",
    "pandas",
    "pdfplumber",
    "PyPDF2",
    "python-dateutil",
    "python-docx",
    "python-Levenshtein",
    "python-pptx",
    "pyyaml",
    "requests",
    "rouge",
    "scipy",
    "spotipy",
    "sympy",
    "tqdm",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
